SER-6201 - Fixed scrolling to prevent double scroll bar.

--- a/app/components/styles/ChatContainer.scss
+++ b/app/components/styles/ChatContainer.scss
@@ -40,7 +40,7 @@
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
   }
 
